--- a/myPortfolioProject/src/app/projects/projects.component.css
+++ b/myPortfolioProject/src/app/projects/projects.component.css
@@ -1,82 +1,91 @@
-/* Estilos de títulos */
 @import url(https://fonts.googleapis.com/css?family=Righteous);
 
 h1 {
-    color: #1abc9c;
-    font-family: 'Righteous';
-    font-size: 2.5em;
-    font-weight: bold;
-    margin: 1em;
-    text-align: center;
-  }
+  color: #1abc9c;
+  font-family: 'Righteous';
+  font-size: 2.5em;
+  font-weight: bold;
+  margin: 1em;
+  text-align: center;
+}
 
-  h2 {
-    font-family: 'Righteous';
-    font-size: 24px;
-    color: #333;
-  }
+h2 {
+  font-family: 'Righteous';
+  font-size: 24px;
+  color: #333;
+}
 
 .project-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: #f4f4f4;
-    margin-top: 2em;
-    text-align: justify;
-  }
-  
-  .project-content {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .project-link {
-    text-align: center;
-  }
-  
-  .project-info {
-    margin-left: 20px;
-  }
-  
-  .project-info p {
-    margin-top: 10px;
-    font-size: 16px;
-    color: #555;
+  display: flex;
+  align-items: flex-start;
+  padding: 20px;
+  background-color: #f4f4f4;
+  margin-top: 2em;
+  text-align: justify;
+}
+
+.project-content {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  width: 100%;
+}
+
+.project-link {
+  text-align: center;
+}
+
+.project-info {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-info p {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #555;
+}
+
+.carousel-item img {
+  width: 300px !important;
+}
+
+.java {
+  width: 250px;
+}
+
+button {
+  font-size: 18px;
+  text-decoration: none;
+  color: #1abc9c;
+  border: #1abc9c 1px solid;
+  border-radius: 10px;
+  width: 10em;
+  margin-bottom: 2em;
+}
+
+@media screen and (min-width: 485px) {
+  .carousel-item img {
+    width: 400px !important;
   }
 
-  .carousel-item img {
-    width: 300px !important;
+  h1 {
+    font-size: 4em;
   }
 
   .java {
-    width: 250px;
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px; 
   }
 
-  @media screen and (min-width: 485px) {
-    .carousel-item img {
-      width: 400px !important;
-    }
-
-    h1 {
-      font-size: 4em;
-    }
-
-    .java {
-      width: 500px;
-    }
-
-  }
-
-  @media screen and (min-width: 1024px) {
-    .carousel-item img {
-      width: 500px !important;
-    }
-
-    .project-content{
-      flex-direction: row;
-    }
-
-  }
+}
