AboutMe text modifications

--- a/myPortfolioProject/src/app/about-me/about-me.component.html
+++ b/myPortfolioProject/src/app/about-me/about-me.component.html
@@ -62,9 +62,9 @@
         Additionally, I have a keen interest in cloud computing and how it is transforming the way businesses operate
         and store data.
         <br><br>
-        In addition to my computer engineering training, I pursued the International Baccalaureate and the Spanish
-        Scientific Baccalaureate at Heidelberg College concurrently. This diverse educational background has not only
-        enhanced my adaptability to different environments and educational approaches but also allowed me to focus on
+        In addition to my computer engineering training, I graduated from the International Baccalaureate and the Spanish
+        Scientific Baccalaureate at Heidelberg Schule simultaneusly. This diverse educational background has not only
+        enhanced my adaptability to different environments and educational approaches, but also allowed me to focus on
         developing proficiency in languages such as English and German. This linguistic component of my education
         complements my technical knowledge, enabling me to effectively collaborate and communicate in international
         settings.
