Laguage change with Transloco API implemented

--- a/myPortfolioProject/src/app/about-me/about-me.component.html
+++ b/myPortfolioProject/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
-<h1>About Me</h1>
+<h1>{{'header.aboutMe' | transloco}}</h1>
 <section class="portfolio">
   <div class="section about-me">
-    <h3>Programming Skills</h3>
+    <h3>{{'aboutMe.skills' | transloco}}</h3>
     <div class="slider">
       <div class="slide-track">
         <app-carousel-item class="slide" *ngFor="let skill of skills" [img]="skill.image" [title]="skill.title">
@@ -12,17 +12,17 @@
 
   <div class="container">
     <div class="section">
-      <h3>Languages I speak</h3>
+      <h3>{{'aboutMe.languages' | transloco}}</h3>
       <div class="language-selector">
         <div class="language-item">
           <div class="language-circle">
             <img src="../../assets/spain.jpg" alt="Bandera 1">
             <div class="language-overlay">
-              <span class="language-text">Native</span>
+              <span class="language-text">{{'aboutMe.native' | transloco}}</span>
             </div>
           </div>
           <div class="language-description">Español</div>
-          <div class="language-description">Native</div>
+          <div class="language-description">{{'aboutMe.native' | transloco}}</div>
         </div>
         <div class="language-item">
           <div class="language-circle">
@@ -48,29 +48,13 @@
     </div>
 
     <div class="section about-me">
-      <h3>Who am I</h3>
-      <p>Welcome to my website. I am Laura González, a third-year student pursuing a degree in Computer Engineering,
-        with expectations of graduating in 2024.
-        <br><br>
-        Throughout my academic journey, I have actively engaged in numerous projects, enabling me to cultivate essential
-        skills in teamwork, communication, and adaptability. I firmly believe in the significance of collaborating with
-        diverse individuals and leveraging a variety of perspectives to generate innovative solutions.
-        <br><br>
-        I have received a solid education in web and mobile development, equipping me with a strong understanding of
-        languages such as HTML, CSS, JavaScript, and experience with frameworks like Angular and Ionic.
-
-        Additionally, I have a keen interest in cloud computing and how it is transforming the way businesses operate
-        and store data.
-        <br><br>
-        In addition to my computer engineering training, I graduated from the International Baccalaureate and the Spanish
-        Scientific Baccalaureate at Heidelberg Schule simultaneusly. This diverse educational background has not only
-        enhanced my adaptability to different environments and educational approaches, but also allowed me to focus on
-        developing proficiency in languages such as English and German. This linguistic component of my education
-        complements my technical knowledge, enabling me to effectively collaborate and communicate in international
-        settings.
-        <br><br>
-        As a student, my goal is to constantly grow and develop both personally and professionally. I have a strong
-        desire to embrace new challenges and expand my horizons.
+      <h3>{{'aboutMe.whoAmI' | transloco}}</h3>
+      <p>
+        {{'aboutMe.myDescription1' | transloco}}<br><br>
+        {{'aboutMe.myDescription2' | transloco}}<br><br>
+        {{'aboutMe.myDescription3' | transloco}}<br><br>
+        {{'aboutMe.myDescription4' | transloco}}<br><br>
+        {{'aboutMe.myDescription5' | transloco}}
       </p>
     </div>
 
