--- a/myPortfolioProject/src/app/contact/contact.component.html
+++ b/myPortfolioProject/src/app/contact/contact.component.html
@@ -1,6 +1,4 @@
-<h1>Contact me!</h1>
-
-
+<h1>{{'main.contact' | transloco}}</h1>
 <div class="container">
     <div class="content">
         <div class="left-side">
@@ -9,7 +7,7 @@
                 <div class="topic">Email</div>
                 <div class="text-one">lauragonzsuarez@gmail.com</div>
             </div>
-            
+
             <div class="linkedin details">
                 <i class="bi bi-linkedin"></i>
                 <div class="topic">LinkedIn</div>
@@ -20,12 +18,11 @@
             
             <div class="address details">
                 <i class="bi bi-geo-alt-fill"></i>
-                <div class="topic">Location</div>
+                <div class="topic">{{'contact.location' | transloco}}</div>
                 <div class="text-one">Las Palmas de Gran Canaria</div>
-                <div class="text-two">Spain</div>
+                <div class="text-two">{{'contact.country' | transloco}}</div>
             </div>
         </div>
-        
         
     </div>
 </div>
