--- a/myPortfolioProject/src/app/main/main.component.html
+++ b/myPortfolioProject/src/app/main/main.component.html
@@ -3,6 +3,6 @@
     <source src="../../assets/background.mp4" type="video/mp4">
   </video>
   <h1 class="main-title">Laura González</h1>
-  <h1 class="text-primary">Computer Engineering Student</h1>
-  <a [routerLink]="['/contact']" class="button">Contact me!</a>
+  <h1 class="text-primary">{{'main.student' | transloco}}</h1>
+  <a [routerLink]="['/contact']" class="button">{{'main.contact' | transloco}}</a>
 </section>
