--- a/myPortfolioProject/src/app/projects/projects.component.html
+++ b/myPortfolioProject/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<h1>My Projects</h1>
+<h1>{{'header.myProjects' | transloco}}</h1>
 <div class="projects">
 
   <section class="project-section">
@@ -32,35 +32,15 @@
       </div>
       <div class="project-info">
         <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
-          <h2>Medical Aesthetics Clinic Webpage</h2>
+          <h2>{{'myProjects.medicalAestheticsTitle' | transloco}}</h2>
         </a>
-        <button (click)="toggleDescription(1)">More information</button>
+        <button (click)="toggleDescription(1)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription1">
-          The goal of this project was to create a visually appealing and easy-to-use platform that allows the clients
-          of
-          an aesthetic clinic to explore treatments and promotions, easily contact the clinic and access their
-          personalized profile. The website was designed to be responsive, providing an optimal experience on mobile and
-          tablet devices.
-          <br><br>
-          To bring this project to life, I used a combination of HTML, CSS, and JavaScript in the early stages. These
-          technologies allowed me to build the core functionalities of the website, ensuring smooth navigation, form
-          submission, and user authentication. Data storage and authentication were handled using Firebase. The design
-          phase was made easier by the use of Figma, a powerful design tool that helped me create aesthetically pleasing
-          interfaces. I selected a color palette with the help of an artificial intelligence, ensuring a consistent and
-          visually appealing appearance throughout the website.
-          <br><br>
-          To manage the project efficiently, I used Trello. This allowed me to organize tasks, track progress, and
-          collaborate effectively with the team. Through the use of agile methodologies and task prioritization, I
-          ensured
-          a smooth and timely development process.
-          <br><br>
-          As the project progressed, I recognized the need for a more robust and scalable framework. Consequently, I
-          migrated the website to the Angular framework. This transition provided improved performance and
-          maintainability, ensuring future scalability.
-          <br><br>
-          The final result was an aesthetically pleasing and functional website where clients could explore treatments,
-          easily contact the clinic through intuitive forms, and access personalized profiles. They could also take
-          advantage of promotions and refer to the Frequently Asked Questions section (FAQ).
+          {{'myProjects.medicalAesthetics1' | transloco}}<br><br>
+          {{'myProjects.medicalAesthetics2' | transloco}}<br><br>
+          {{'myProjects.medicalAesthetics3' | transloco}}<br><br>
+          {{'myProjects.medicalAesthetics4' | transloco}}<br><br>
+          {{'myProjects.medicalAesthetics5' | transloco}}
         </p>
       </div>
     </div>
@@ -105,41 +85,16 @@
         <a href="https://github.com/lauragonzs/ServicioBibliotecaOnline.git" class="project-link">
           <h2>Librarium</h2>
         </a>
-        <button (click)="toggleDescription(2)">More information</button>
+        <button (click)="toggleDescription(2)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription2">
-          Librarium is an innovative website that offers a subscription-based online library service, giving subscribed
-          users the opportunity to access a wide variety of books digitally.
-          <br><br>
-          To carry out this project, I used Angular Framework and Firebase, in order to manage user authentication and
-          store the database in the cloud.
-          <br><br>
-          The website has a wide number of outstanding features. Firstly, a book details section has been developed,
-          where
-          users can get detailed information about each work. In addition, a book reading page has been implemented,
-          allowing users to change the language and enjoy a personalized reading experience. The page also has a reviews
-          section, where users can share their opinions and comments about the books.
-          <br><br>
-          In order to facilitate the search for books, an advanced search section has been incorporated, which allows
-          users to filter by title, author or category. An audiobook section has also been included, giving users the
-          option to enjoy audio narrations. The user profiles are a fundamental part of the page, since they allow each
-          user to have a personalized follow-up of their favourites, read and pending books.
-          <br><br>
-          In addition, an administrator panel has been developed that provides additional functionalities. The admin can
-          perform a full CRUD (Create, Read, Update, Delete) of users and books, as well as remove inappropriate
-          reviews.
-          This guarantees efficient and safe control of the platform.
-          <br><br>
-          In terms of design, special attention has been paid to the user experience. The website offers the option of
-          light mode and dark mode, adapting to the individual preferences of each user. In addition, we have used an
-          API
-          to offer the option to switch the language between English and Spanish, with the aim of obtaining more users.
-          <br><br>
-          To ensure a smooth and secure subscription experience, we have used a fee payment API, allowing users to
-          manage
-          their membership easily and securely.
-          <br><br>
-          The website is complete and offers a wide range of functionalities that provide reading-loving users with an
-          enriching and satisfying experience, being more than a viable production-ready minimum.
+          {{'myProjects.librarium1' | transloco}}<br><br>
+          {{'myProjects.librarium2' | transloco}}<br><br>
+          {{'myProjects.librarium3' | transloco}}<br><br>
+          {{'myProjects.librarium4' | transloco}}<br><br>
+          {{'myProjects.librarium5' | transloco}}<br><br>
+          {{'myProjects.librarium6' | transloco}}<br><br>
+          {{'myProjects.librarium7' | transloco}}<br><br>
+          {{'myProjects.librarium8' | transloco}}
         </p>
       </div>
     </div>
@@ -167,35 +122,16 @@
       </div>
       <div class="project-info">
         <a href="https://github.com/lauragonzs/NeuralNetwork-TomatoLeaves.git" class="project-link">
-          <h2>Neural Network</h2>
+          <h2>{{'myProjects.neuralNetworkTitle' | transloco}}</h2>
         </a>
-        <button (click)="toggleDescription(3)">More information</button>
+        <button (click)="toggleDescription(3)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription3">
-          In this project, I have designed a training system using a neural network to identify different diseases in
-          tomato leaves. To achieve this, I have used two key tools: TensorFlow for the creation and training of the
-          neural networks, and the VGG16 architecture.
-          <br><br>
-          The model has been trained using a comprehensive collection of photographs of tomato leaves affected by
-          various
-          diseases.
-          <br><br>
-          The obtained result has been a model accuracy of 0.9539. This means that the model is capable of correctly
-          classifying diseases in a high percentage of cases, demonstrating its effectiveness and usefulness in
-          diagnosing
-          tomato leaf diseases.
-          <br><br>
-          In addition to training the neural network, a graph has been designed to display the model's accuracy over
-          time.
-          This graph is used for visualizing and analyzing the improvement of the model as the training progresses.
-          <br><br>
-          Furthermore, a confusion matrix has been created, which is a useful tool for evaluating the performance of a
-          classification model. This matrix displays the frequency at which the model correctly or incorrectly
-          classifies
-          each disease class in tomato leaves, providing valuable information for adjusting and improving the model in
-          future iterations.
-          <br><br>
-          The resulting model has achieved a high accuracy in identifying diseases in tomato leaves, demonstrating its
-          potential application in early detection and control of diseases in agricultural crops.
+          {{'myProjects.neuralNetwork1' | transloco}}<br><br>
+          {{'myProjects.neuralNetwork2' | transloco}}<br><br>
+          T{{'myProjects.neuralNetwork3' | transloco}}<br><br>
+          {{'myProjects.neuralNetwork4' | transloco}}<br><br>
+          {{'myProjects.neuralNetwork5' | transloco}}<br><br>
+          {{'myProjects.neuralNetwork6' | transloco}}
         </p>
       </div>
     </div>
@@ -210,25 +146,12 @@
         <a href="https://github.com/lauragonzs/ImageViewer.git" class="project-link">
           <h2>Image Viewer</h2>
         </a>
-        <button (click)="toggleDescription(4)">More information</button>
+        <button (click)="toggleDescription(4)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription4">
-          The Image Viewer project is a Java-based desktop application that functions as an image carousel. Users can
-          navigate through a collection of images using scroll arrows or by directly dragging the images with the mouse.
-          <br><br>
-          To ensure a well-structured design, the Model-View-Presenter (MVP) architectural pattern was implemented. The
-          View handles the display of the user interface, including the carousel interface and image area, while
-          receiving
-          user input.
-          <br><br>
-          The Presenter acts as the intermediary between the Model and the View. It receives user input from the View,
-          interacts with the Model to retrieve relevant images, and updates the View accordingly. It also manages the
-          logic for arrow-based scrolling and mouse interaction, ensuring the proper display of images based on user
-          actions.
-          <br><br>
-          By utilizing the MVP pattern, the application achieves a clear separation of responsibilities, simplifying
-          maintenance. The collaboration between the Model, View, and Presenter creates an intuitive and user-friendly
-          image carousel experience, allowing seamless navigation through images using scroll arrows or direct mouse
-          interaction.
+          {{'myProjects.imageViewer1' | transloco}}<br><br>
+          {{'myProjects.imageViewer2' | transloco}}<br><br>
+          {{'myProjects.imageViewer3' | transloco}}<br><br>
+          {{'myProjects.imageViewer4' | transloco}}
         </p>
       </div>
     </div>
@@ -241,20 +164,11 @@
         <a href="https://github.com/lauragonzs/BlackJack-TDD" class="project-link">
           <h2>BlackJack TDD</h2>
         </a>
-        <button (click)="toggleDescription(5)">More information</button>
+        <button (click)="toggleDescription(5)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription5">
-          The "Blackjack Game" desktop application implements the game of blackjack using the Test-Driven Development
-          (TDD) methodology in Java.
-          <br><br>
-          The development of the application follows the TDD approach, which involves writing tests before implementing
-          the functionality. Tests are created to define the expected behavior of different game components, such as the
-          deck of cards, scoring rules, and player actions.
-          <br><br>
-          With each test, the necessary code is implemented to make it pass. This ensures that the functionality is
-          developed incrementally and that the established requirements are always met. This approach also guarantees a
-          high level of test coverage, promoting code robustness and maintainability. It enables the application to
-          easily
-          grow and adapt in the future.
+          {{'myProjects.blackjack1' | transloco}}<br><br>
+          {{'myProjects.blackjack2' | transloco}}<br><br>
+          {{'myProjects.blackjack3' | transloco}}
         </p>
       </div>
     </div>
@@ -269,29 +183,14 @@
         <a href="https://github.com/lauragonzs/MoneyCalculator.git" class="project-link">
           <h2>Money Calculator</h2>
         </a>
-        <button (click)="toggleDescription(6)">More information</button>
+        <button (click)="toggleDescription(6)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription6">
-          The MoneyCalculator project is a Java-based desktop application that serves as a currency exchange calculator.
-          It allows users to calculate exchange rates between different currencies using their respective currencies.
-          <br><br>
-          To design the application, the Model-View-Controller (MVC) architectural pattern has been employed. The Model
-          represents the data and logic of the application, including currency information and exchange rate
-          calculations.
-          <br><br>
-          The View is responsible for displaying the user interface elements, such as input fields for selecting
-          currencies and displaying the calculated exchange rates.
-          <br><br>
-          The Controller acts as the intermediary between the Model and the View. It handles user input, communicates
-          with
-          the Model to perform currency calculations, and updates the View accordingly.
-          <br><br>
-          By implementing the MVC pattern, the application achieves a clear separation of concerns, making it easier to
-          maintain and modify. The Model handles currency data and calculations, the View handles user interface
-          rendering, and the Controller manages the interactions between them.
-          <br><br>
-          Overall, the MoneyCalculator application provides a user-friendly interface for calculating exchange rates
-          between different currencies, utilizing the MVC architecture to ensure a well-structured and maintainable
-          design.
+          {{'myProjects.moneyCalculator1' | transloco}}<br><br>
+          {{'myProjects.moneyCalculator2' | transloco}}<br><br>
+          {{'myProjects.moneyCalculator3' | transloco}}<br><br>
+          {{'myProjects.moneyCalculator4' | transloco}}<br><br>
+          {{'myProjects.moneyCalculator5' | transloco}}<br><br>
+          {{'myProjects.moneyCalculator6' | transloco}}
         </p>
       </div>
     </div>
