--- a/myPortfolioProject/src/app/projects/projects.component.html
+++ b/myPortfolioProject/src/app/projects/projects.component.html
@@ -34,7 +34,7 @@
         <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
           <h2>{{'myProjects.medicalAestheticsTitle' | transloco}}</h2>
         </a>
-        <button (click)="toggleDescription(1)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(1)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription1">
           {{'myProjects.medicalAesthetics1' | transloco}}<br><br>
           {{'myProjects.medicalAesthetics2' | transloco}}<br><br>
@@ -85,7 +85,7 @@
         <a href="https://github.com/lauragonzs/ServicioBibliotecaOnline.git" class="project-link">
           <h2>Librarium</h2>
         </a>
-        <button (click)="toggleDescription(2)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(2)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription2">
           {{'myProjects.librarium1' | transloco}}<br><br>
           {{'myProjects.librarium2' | transloco}}<br><br>
@@ -124,7 +124,7 @@
         <a href="https://github.com/lauragonzs/NeuralNetwork-TomatoLeaves.git" class="project-link">
           <h2>{{'myProjects.neuralNetworkTitle' | transloco}}</h2>
         </a>
-        <button (click)="toggleDescription(3)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(3)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription3">
           {{'myProjects.neuralNetwork1' | transloco}}<br><br>
           {{'myProjects.neuralNetwork2' | transloco}}<br><br>
@@ -146,7 +146,7 @@
         <a href="https://github.com/lauragonzs/ImageViewer.git" class="project-link">
           <h2>Image Viewer</h2>
         </a>
-        <button (click)="toggleDescription(4)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(4)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription4">
           {{'myProjects.imageViewer1' | transloco}}<br><br>
           {{'myProjects.imageViewer2' | transloco}}<br><br>
@@ -164,7 +164,7 @@
         <a href="https://github.com/lauragonzs/BlackJack-TDD" class="project-link">
           <h2>BlackJack TDD</h2>
         </a>
-        <button (click)="toggleDescription(5)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(5)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription5">
           {{'myProjects.blackjack1' | transloco}}<br><br>
           {{'myProjects.blackjack2' | transloco}}<br><br>
@@ -183,7 +183,7 @@
         <a href="https://github.com/lauragonzs/MoneyCalculator.git" class="project-link">
           <h2>Money Calculator</h2>
         </a>
-        <button (click)="toggleDescription(6)">{{'myProjects.moreInfo' | transloco}}</button>
+        <button class="btnToggle" (click)="toggleDescription(6)">{{'myProjects.moreInfo' | transloco}}</button>
         <p class="project-description" [hidden]="!showDescription6">
           {{'myProjects.moneyCalculator1' | transloco}}<br><br>
           {{'myProjects.moneyCalculator2' | transloco}}<br><br>
