--- a/myPortfolioProject/src/app/contact/contact.component.css
+++ b/myPortfolioProject/src/app/contact/contact.component.css
@@ -81,13 +81,18 @@ h2 {
         display: none;
     }
 
-    @media (max-width: 950px) {
-        .container {
-            width: 90%;
-            padding: 30px 40px 40px 35px;
-            align-items: center;
-            justify-content: center ;
-        }
+    h1 {
+        font-size: 2.5em;
     }
     
+}
+
+
+@media (max-width: 950px) {
+    .container {
+        width: 90%;
+        padding: 30px 40px 40px 35px;
+        align-items: center;
+        justify-content: center ;
+    }
 }
